2006-05-10 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 1.2.5

2006-05-10 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac, Makefile.am: Link against hildonfm to make some
	  applets happier (Closes N#27086)

2006-04-24 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.[ch], hildon-cp-rfs.c: Added help
	  topic to the RFS and CUD dialogs (Closes N#27548 and N#27549)

2006-04-10 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 1.2.4

2006-04-10 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.[ch], hildon-cp-rfs.c: The warning dialog
	  for RFS and CUD is now implemented with a generic GtkDialog rather
	  than a HildonNote (Closes N#25584 and N#25588)

2006-04-07 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Set the application name to "" so
	  it doesn't appear in the title bar (Closes N#26023)

2006-04-03 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 1.2.3

2006-04-03 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.h: Corrected two logical ids

2006-03-20 Johan Bilien <johan.bilien@nokia.com>
	* hildon-control-panel-main.c:
	  - Move back to big icon by default, as per new specifications.
	    (Closes N#24453, N#24777)
	  - Send the library file to cp_plugin_save_state, not the .desktop file
	    filename (Closes N#24287)
	* configure.ac: 1.2.2

2006-03-13 Johan Bilien <johan.bilien@nokia.com>
	* Fixed localization of the wrong code infobanner
	* configure.ac: 1.2.1

2006-03-10 Johan Bilien <johan.bilien@nokia.com>
	* Fixed a localisation logical ID

2006-03-06 Johan Bilien <johan.bilien@nokia.com>
	* hildon-cp-rfc.c: Replaced calls to codelockui with calls to
	  hildon-libs and libosso
	* configure.ac: 1.2.0

2006-02-23 Johan Bilien <johan.bilien@nokia.com>
	* hildon-control-panel-main.[ch]: Ported to HildonWindow / HildonProgram

2006-02-21 Johan Bilien <johan.bilien@nokia.com>
	* Small icon size is now the default (Closes N#22927)
